colors, spacing, header fixed

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -8,25 +8,6 @@ body {
     height: 92vh;
 }
 
-/* Header */
-header {
-    min-width: 100%;
-    padding: 0;
-    margin: 0 auto;
-    text-align: center;
-}
-
-header>span {
-    margin-right: 0.5em;
-    font-size: 3.5em;
-    display: inline-block;
-}
-
-header>p {
-    font-size: 3.5em;
-    display: inline-block;
-}
-
 #app {
     text-align: center;
     display: flex;
@@ -103,6 +84,8 @@ https://css-tricks.com/places-its-tempting-to-use-display-none-but-dont/ */
 
 /* Commonly used sportwatch styles */
 .generic_header {
+    position: sticky;
+    top: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: table;
     table-layout: fixed;
@@ -116,6 +99,7 @@ https://css-tricks.com/places-its-tempting-to-use-display-none-but-dont/ */
     padding-top: constant(safe-area-inset-top);
     padding-top: env(safe-area-inset-top);
 }
+
 
 .generic_select {
     color: white;
@@ -163,7 +147,6 @@ https://css-tricks.com/places-its-tempting-to-use-display-none-but-dont/ */
 
 /* CSS FOR GENERATED BUTTONS */
 .generated_button {
-
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2em;
     font-weight: bold;
@@ -174,7 +157,7 @@ https://css-tricks.com/places-its-tempting-to-use-display-none-but-dont/ */
     background-color: lightgray;
     color: black;
 
-    border-radius: 52%;
+    border-radius: 7.5%;
     border: 2px solid black;
 }
 
@@ -235,15 +218,15 @@ https://css-tricks.com/places-its-tempting-to-use-display-none-but-dont/ */
 }
 
 .mid_event {
-    background-color: coral;
+    background-color: #68a8be;
 }
 
 .hurdle_event {
-    background-color: lightyellow;
+    background-color: #68be9a;
 }
 
 .long_event {
-    background-color: lightgreen;
+    background-color: #7d7d7b;
 }
 
 .power_field_event {
