--- a/www/css/navbar.css
+++ b/www/css/navbar.css
@@ -13,6 +13,7 @@
 }
 
 .navbar div {
+    overflow: hidden;
     font-family: 'Helvetica', 'Arial', sans-serif;
     color: white;
     display: table-cell;
