--- a/www/css/settings.css
+++ b/www/css/settings.css
@@ -2,6 +2,10 @@
     font-size: 30px;
 }
 
+/* give spacing away from header */
+#settingsPage .div_page .generic_header {
+    margin-bottom: 6em;
+}
 /* General Page Styling */
 
 #settingsPage .back_arrow {
