--- a/www/css/team.css
+++ b/www/css/team.css
@@ -11,6 +11,17 @@
   border-bottom: none; /* Prevent double borders */
 }
 
+#teamPage .athlete_container {
+    float: left;
+    width: 50%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
 
 /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
 // athletePage elements
